# ReproductorAudioVisual

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  build_exe.py  pyproject.toml  requirements.txt
src/: AudioExtractor.py  SubtitleGenerator.py  main.py  player.py  player_types.py  ui.py
src/components/: controls.py  video_widget.py
src/styles/: main.qss
tests/: test_player.py
